fix(front): fix broken menu size on small screen

--- a/game/css/styles.css
+++ b/game/css/styles.css
@@ -152,9 +152,9 @@ li {
     padding: 16px;
     z-index: 2;
     position: absolute;
-    margin: 180px 500px;
+    margin: 180px 20%;
     border-radius: 8px;
-    width: calc(100% - 1000px);
+    width: 60%;
 }
 
 .button_centered {
